DP入门内容补充

--- a/_posts/01_Algorithms/2025-03-20-动态规划入门.md
+++ b/_posts/01_Algorithms/2025-03-20-动态规划入门.md
@@ -7,68 +7,285 @@ math: true
 layout: post
 ---
 
-大事化小，小事化了！！！！！！！！
+大事化小，小事化了！动态规划（Dynamic Programming，简称 DP）是算法中**最重要、也最容易让人迷糊**的一类思想。
+
+---
 
 ## 基本概念
 
-动态规划（Dynamic Programming），过程是：每次决策依赖于当前状态，又随即引起状态的转移。
+一句话定义：
 
-一个决策序列就是在变化的状态中产生出来的，所以，这种**多阶段最优化决策解决问题**的过程就称为动态规划。
+> **DP 是在“存在重复子问题”的前提下，通过记录中间结果来避免重复计算，从而高效求解最优解的问题。**
 
-**基本思想与策略**：
+它解决的核心问题是三类：
 
-基本思想与分治法类似，也是将待求解的问题分解为若干个子问题（阶段），按顺序求解子阶段，前一子问题的解，为后一子问题的求解提供了有用的信息。
+* 最值（最大 / 最小）
+* 可行性（能不能做到）
+* 计数（有多少种方案）
 
-在求解任一子问题时，列出各种可能的局部解，通过决策保留那些有可能达到最优的局部解，丢弃其他局部解。依次解决各子问题，最后一个子问题就是初始问题的解。
+---
 
-> 与分治法最大的差别是：**适合于用动态规划法求解的问题，经分解后得到的子问题往往不是互相独立的。**
-> 
-> 即下一个子阶段的求解是建立在上一个子阶段的解的基础上，再进行下一步的求解。
+不是所有题都适合 DP。
+当你在题目中看到这些特征时，**DP 几乎是第一选择**：
 
-**适用情况**：
+* 要求「最大 / 最小 / 最优」
+* 有明显的「子问题」
+* 当前选择会影响后续结果
+* 有“选 / 不选”“做 / 不做”的决策
+* 暴力枚举会出现大量重复计算
 
-能采用动态规划求解的问题的一般要具有3个性质：
+> 如果一个问题能被拆成「规模更小、结构相同的子问题」，那它就非常适合 DP。
 
-1. **最优化原理**：如果问题的最优解所包含的子问题的解也是最优的，就称该问题具有最优子结构，即满足最优化原理。
-2. **无后效性**：即某阶段状态一旦确定，就不受这个状态以后决策的影响。也就是说，某状态以后的过程不会影响以前的状态，只与当前状态有关。
-3. **有重叠子问题**：即子问题之间是不独立的，一个子问题在下一阶段决策中可能被多次使用到。（*该性质并不是动态规划适用的必要条件，但是如果没有这条性质，动态规划算法同其他算法相比就不具备优势*）。
+---
 
-## 求解的基本步骤
+## 求解步骤
 
-动态规划所处理的问题是一个多阶段决策问题，一般由初始状态开始，通过对中间阶段决策的选择，达到结束状态。
+任何 DP 题，本质都在回答这四个问题：
 
-这些决策形成了一个决策序列，同时确定了完成整个过程的一条活动路线(通常是求最优的活动路线)。
+| 问题     | 含义              |
+| ------ | --------------- |
+| 状态是什么？ | dp[i] 表示什么      |
+| 如何转移？  | dp[i] 怎么从之前的状态来 |
+| 边界条件？  | 最小规模如何处理        |
+| 遍历顺序？  | 先算谁、后算谁         |
 
-如下所示，动态规划的设计都有着一定的模式，一般要经历以下几个步骤：
+> **不会 DP $≈$ 状态没想清楚**
 
-> 初始状态→│决策１│→│决策２│→…→│决策ｎ│→结束状态
+---
 
-1. **划分阶段**。按照问题的时间或者空间特征，把问题分为若干个阶段。在划分阶段时，注意*划分后的阶段一定是要有序的或者是可排序的*，否则问题就无法求解。
-2. **确定状态和状态变量**。将问题发展到各个阶段是所处于各种客观情况用不同的状态表示出来。当然，状态的选择要满足无后效性。
-3. **确定决策并写出状态转移方程**。因为决策和状态转移有着天然的联系，*状态转移就是根据上一阶段的状态和决策来导出本阶段的状态*。所以如果确定了决策，状态转移方程也就可写出。但事实上，常常是发过来的，*根据相邻两个阶段的状态之间的关系来确定决策方法和状态转移方程*。
-4. **寻找边界条件**。给出的状态转移方程是一个递归式，需要一个地推的终止条件和边界条件。
+DP 的两种实现方式
+一、记忆化搜索（自顶向下）
 
-> 一般来讲，只要解决问题的**划分阶段**、**状态**和**状态转移策略**，就可以写出**状态转移方法（包括边界条件）**。
+* 写法像 DFS
+* 用缓存避免重复计算
+* 更符合直觉
 
-实际应用中，还可以按以下几个简化的步骤进行设计：
-1. 分析最优解的性质，并刻画出其结构特征。
-2. 递归的定义最优解。
-3. 以自底向上或自顶向下的记忆化方法计算出最优值。
-4. 根据计算最优值时得到的信息，构造问题的最优解。
+```python
+@lru_cache(None)
+def dfs(state):
+    if base_case:
+        return ...
+    return min / max / sum(dfs(next_state))
+```
 
-**算法实现：**
+二、递推（自底向上）
 
-动态规划主要难点在于理论上的设计，也就是上面四个步骤的确定，一旦设计完成，实现部分就会非常加单。
+* 用 for 循环
+* 更高效、可控
+* 更适合比赛和工程
 
-使用动态规划求解问题，**最重要就是确定动态规划三要素**：
+```python
+for i in range(1, n):
+    dp[i] = ...
+```
 
-1. 问题的阶段
-2. 每个阶段的状态
-3. 从前一个阶段转化到后一个阶段之间的递推关系。
+---
 
-递推关系必须是从次小问题开始到较大问题之间的转化，从这个角度来说，动态规划往往可以用递归程序来实现。
+## DP 的九大核心类别
 
-不过因为，**递推可以充分利用前面保存的子问题的解来减少重复计算，所以对于大规模问题来说，有递归不可比拟的优势，这也是动态规划算法的核心之处**。
+### ① 线性 DP
+
+线性 DP 是最基础、也是最常见的一类动态规划，其核心特征是：
+**状态沿着一个一维序列推进，当前状态只依赖于前面若干个状态**。
+
+**状态形式**：
+
+典型状态形式为 `dp[i]`，表示“考虑到第 i 个位置时的最优解”。
+这类问题往往包含“相邻约束”“选或不选”“前缀最优”等特征。
+
+**特征**：
+
+* 状态是一维
+* dp[i] 只依赖前面若干个状态
+
+**典型模型**：
+
+* 打家劫舍
+* 值域打家劫舍
+* 一维子序列 DP
+* 相邻约束的线性最优
+
+线性 DP 是理解其他复杂 DP（如区间、树形、状态机 DP）的基础。
+更多内容参考[线性DP专栏](/posts/线性DP/)
+
+---
+
+### ② 区间 DP
+
+区间 DP 的状态定义在一个**连续区间**上，其核心特征是：
+**枚举“区间的最后一步”或“区间的分割点”**，通过合并更小区间的结果来求解大区间。
+
+**状态形式**：
+通常表示为 `dp[l][r]`，表示区间 `[l, r]` 的最优解。
+
+**特征**：
+* 区间 DP 的转移往往涉及三层循环，时间复杂度较高
+* 逻辑结构非常清晰
+
+**代表题**：
+
+| 题号   | 题目                                                                                | 标签                   |
+| ---- | --------------------------------------------------------------------------------- | -------------------- |
+| 516  | [最长回文子序列](https://leetcode.cn/problems/longest-palindromic-subsequence/)          | 区间 DP / 字符串 / 模板题    |
+| 1235 | [规划兼职工作](https://leetcode.cn/problems/maximum-profit-in-job-scheduling/)                         | 区间 DP / 排序 + 二分 / 提升题 |
+| 1751 | [最多可以参加的会议数目 II](https://leetcode.cn/problems/maximum-number-of-events-that-can-be-attended-ii/) | 区间 DP / 排序 + 二分 / 提升题 |
+
+---
+
+### ③ 网格 DP
+
+网格 DP 的状态定义在二维坐标上，常用于路径规划、最短路径、计数路径等问题，是二维 DP 中最直观的一类。
+
+**状态形式**：
+通常为 `dp[i][j]`，表示到达网格中 `(i, j)` 位置的最优结果。
+
+**特征**：
+* 状态空间是二维
+* 转移方向固定（如来自上方、左方、左上角等）
+* 状态之间构成一个 **有向无环图（DAG）**
+
+更多内容参考[网格图DP专栏](/posts/网格图DP/)
+
+---
+
+### ④ 树形 DP
+
+树形 DP 是在树结构上进行的动态规划。常用于“选或不选节点”“子树最优解”“树上独立集”等问题，是结构化 DP 的重要代表。
+
+**状态形式**：
+状态通常定义为 `dp[u][*]`，表示以节点 `u` 为根的子树状态。
+
+**特征**：
+* 利用 DFS 遍历树
+* 在“回溯阶段”合并子树的 DP 结果
+* 正确处理父子关系，避免重复计算
+
+**代表题**：
+
+| 题号  | 题目                                                               | 标签                                          |
+| --- | ---------------------------------------------------------------- | ------------------------------------------- |
+| 337 | [打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)         | 二叉树 / 树形 DP / 递归 / 提升题 |
+
+---
+
+### ⑤ 背包 DP
+
+背包 DP 是一类带有“容量 / 成本约束”的动态规划问题，核心目标是在限制条件下最大化收益或判断可行性。
+
+根据每个物品的使用次数不同，背包问题可细分为：
+* 0/1 背包
+* 完全背包
+* 多重背包
+* 分组背包
+
+**状态形式**：
+状态通常定义为 `dp[c]` 或 `dp[i][c]`，表示在容量为 `c` 时的最优结果。
+
+**特征**：
+* 有容量 / 成本限制
+* 是否能装 / 装多少
+
+更多内容参考[背包DP专栏](/posts/背包DP/)
+
+---
+
+### ⑥ 状态机 DP
+
+状态机 DP 是动态规划中一种**特殊的线性结构 DP**，它的核心思想是：
+**将问题抽象为“有限状态 + 时间/位置推进”，然后按状态转移求解最优解或计数。**
+
+**状态形式**：
+典型状态形式为 `dp[i][state]`，其中：
+* `i` 表示时间 / 位置
+* `state` 表示当前所处的有限状态
+
+**特征**：
+* 状态数有限
+* 随 i 线性推进
+
+**代表题**：
+
+| 题号  | 题目                                                                                                  | 标签                  |
+| --- | --------------------------------------------------------------------------------------------------- | ------------------- |
+| 121 | [买卖股票的最佳时机](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)                          | 股票系列 / 贪心 / 模板题 |
+| 122 | [买卖股票的最佳时机 II](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/)                    | 股票系列 / 状态机 DP / 模板题     |
+| 123 | [买卖股票的最佳时机 III](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iii/)                  | 股票系列 / 状态机 DP / 提升题 |
+| 188 | [买卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)                    | 股票系列 / 状态机 DP / 提升题 |
+| 309 | [最佳买卖股票时机含冷冻期](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-with-cooldown/)         | 股票系列 / 状态机 DP / 提升题 |
+| 714 | [买卖股票的最佳时机含手续费](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-with-transaction-fee/) | 股票系列 / 状态机 DP / 提升题 |
+
+---
+
+### ⑦ 状压 DP
+
+状压 DP 使用一个二进制掩码（mask）来表示“一个集合的状态”，常用于元素数量较小（通常 ≤ 20）的情况。
+常用于 TSP、子集划分、组合枚举等问题，是时间换空间的典型代表。
+
+**状态形式**：
+* `dp[mask]`
+* `dp[mask][i]`
+
+其中：
+* `mask` 是一个二进制整数，每一位代表集合中的一个元素是否被选择/使用。例如，对于 n = 4 个元素：`mask = 0b1010` 表示元素 1 和元素 3 被选中，其余未选中
+* `dp[mask][i]` 表示在 mask 状态下，集合中某个特定元素 i 的附加信息，例如：表示在已经选择 mask 的元素后，最后选择 i 的最优解
+
+**特征**：
+* 用二进制表示选中 / 未选中
+* 枚举子集或向集合中逐步加入元素
+
+**代表题**：
+
+| 题号   | 题目                                                                                        | 标签                         |
+| ---- | ----------------------------------------------------------------------------------------- | -------------------------- |
+| 1931 | [用三种不同颜色为网格涂色](https://leetcode.cn/problems/painting-a-grid-with-three-different-colors/) | 状压 DP / 列 DP / 网格 DP / 提升题 |
+
+---
+
+### ⑧ 数位 DP
+
+数位 DP 是一类专门用于**按数字位进行枚举与统计**的动态规划方法，常用于处理大整数区间问题。
+其核心用途是高效统计 `[0, R]` 或 `[L, R]` 内满足某些数字结构特征的数。
+
+**状态形式**：
+`dp[pos][state][tight]`
+
+其中：
+* `pos` 表示当前处理到的数字位
+* `state` 表示题目相关的额外状态
+* `tight` 表示是否受上界约束
+
+**特征**：
+* 按数字位 DP
+* 区间统计
+
+**代表题**：
+
+| 题号   | 题目                                                                                                    | 标签            |
+| ---- | ----------------------------------------------------------------------------------------------------- | ------------- |
+| 1399 | [统计最大组的数目](https://leetcode.cn/problems/count-largest-group/)                                         | 数位和 / 枚举      |
+| 2843 | [统计对称整数的数目](https://leetcode.cn/problems/count-symmetric-integers)                                    | 数位枚举 / 回文判断   |
+| 2999 | [统计强大整数的数目](https://leetcode.cn/problems/count-the-number-of-powerful-integers/)                      | 枚举 / 区间计数     |
+| 3352 | [统计小于 N 的 K 可约简整数](https://leetcode.cn/problems/count-k-reducible-numbers-less-than-n/)               | 数位 DP / 数学    |
+| 3621 | [位计数深度为 K 的整数数目 I](https://leetcode.cn/problems/number-of-integers-with-popcount-depth-equal-to-k-i/) | 位运算 / 数位 DP   |
+| 3753 | [区间内数字的总波动值 II](https://leetcode.cn/problems/total-waviness-of-numbers-in-range-ii/)                  | 数位 DP / 波动性计数 |
+
+---
+
+### ⑨ 概率 / 期望 DP
+
+概率 / 期望 DP 用于求解随机过程中的期望值或概率结果，其状态转移通常带有概率权重。
+
+典型形式为：
+`dp[state] = Σ(转移概率 × dp[next_state])`
+
+这类 DP 的难点不在代码，而在于：
+
+* 正确建立期望方程
+* 理解状态之间的随机转移关系
+
+常见于掷骰子、随机游走、博弈期望等问题，是 DP 中偏数学的一类。
+
+---
 
 ## 入门案列
 
