--- a/_posts/01_Algorithms/2025-03-21-线性DP.md
+++ b/_posts/01_Algorithms/2025-03-21-线性DP.md
@@ -390,11 +390,12 @@ class Solution:
 
 ## 经典例题
 
-| 题号   | 题目                                                                                | 特征          | 备注        |
-| ---- | --------------------------------------------------------------------------------- | ----------- | --------- |
-| 198  | [打家劫舍](https://leetcode.cn/problems/house-robber/)                                | 下标相邻        | 线性 DP 模板  |
-| 740  | [删除并获得点数](https://leetcode.cn/problems/delete-and-earn/)                          | 值域相邻        | 值域打家劫舍模板题 |
-| 3186 | [施咒的最大总伤害](https://leetcode.cn/problems/maximum-total-damage-with-spell-casting/) | 值域稀疏 + 额外权重 | 提升题     |
-| 213  | [打家劫舍 II](https://leetcode.cn/problems/house-robber-ii/)                          | 环形相邻        | 提升题     |
+| 题号   | 题目                                                                                | 特征                          | 备注        |
+| ---- | --------------------------------------------------------------------------------- |-----------------------------| --------- |
+| 198  | [打家劫舍](https://leetcode.cn/problems/house-robber/)                                | 下标相邻                        | 线性 DP 模板  |
+| 740  | [删除并获得点数](https://leetcode.cn/problems/delete-and-earn/)                          | 值域相邻                        | 值域打家劫舍模板题 |
+| 3186 | [施咒的最大总伤害](https://leetcode.cn/problems/maximum-total-damage-with-spell-casting/) | 值域稀疏 + 额外权重                 | 提升题     |
+| 213  | [打家劫舍 II](https://leetcode.cn/problems/house-robber-ii/)                          | 环形相邻                        | 提升题     |
+| 139 | [单词拆分](https://leetcode.cn/problems/word-break/) | 划分一维序列 / 线性划分 / 划分型DP / 模板题 |
 
 ---
