--- a/_posts/01_Algorithms/2025-03-22-网格图DP.md
+++ b/_posts/01_Algorithms/2025-03-22-网格图DP.md
@@ -21,6 +21,15 @@ layout: post
 * 网格中带有障碍物，或每个格子有权值，求路径的最优解。
 * 统计不同路径数、最大/最小路径和。
 
+核心思路：每个格子的值取决于它的上方和左方。
+
+常见变种：
+
+* 路径条数（组合数 DP）
+* 路径最小/最大权值
+* 带障碍物
+* 状态压缩优化（一维 DP 或 利用原网格）
+
 ---
 
 ## 最短/最长路径类
@@ -133,14 +142,8 @@ for i in range(m):
 
 ---
 
-## 总结
+## 经典例题
 
-* **核心思路**：每个格子的值取决于它的上方和左方。
-
-* **常见变种**：
-  * 路径条数（组合数 DP）
-  * 路径最小/最大权值
-  * 带障碍物
-  * 状态压缩优化（一维 DP 或 利用原网格）
-
----
+| 题号  | 题目                                                      | 标签                          |
+| --- | ------------------------------------------------------- | --------------------------- | 
+| 221 | [最大正方形](https://leetcode.cn/problems/maximal-square/)   | 网格 DP / 二维 DP / 状态压缩 / 提升题  |
