--- a/_posts/01_Algorithms/2025-11-14-区间处理算法技巧.md
+++ b/_posts/01_Algorithms/2025-11-14-区间处理算法技巧.md
@@ -238,5 +238,7 @@ class Solution:
 | ---- | ---------------------------------------------------------------------------------------------------- |---------------------|
 | 3739 | [统计主要元素子数组数目 II](https://leetcode.cn/problems/count-subarrays-with-majority-element-ii/description/) | 枚举右维护左 / 有序集合 / 提升题 |
 | 3381 | [长度可被 K 整除的子数组的最大元素和](https://leetcode.cn/problems/maximum-subarray-sum-with-length-divisible-by-k/) | 前缀处理 / 枚举右维护左 / 提升题 |
+| 1653 | [使字符串平衡的最少删除次数](https://leetcode.cn/problems/minimum-deletions-to-make-string-balanced/) | 前后缀分解 / 动态规划 / 提升题 |
+
 
 ---
